--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
         {% for post in site.related_posts limit: 5 %}
         {% unless post.draft %}
         <li>
-          <a href="{{post.url}}">
+          <a href="{{site.baseurl}}{{post.url}}">
             <h3><em>{{post.title}}</em></h3>
             <small><b>{{post.author}}</b></small>
           </a>
