updating example posts and links

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,7 +2,7 @@
   <small>
     &copy; 2016 {{site.owner.name}}
     <br>
-    Powered by Jekyll using the Progress Theme.
+    Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://alexanderussell.org/progress-for-jekyll/">Progress Theme</a>.
   </small>
 </footer>
 
