--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="articles">
-  <article>
+  <article class="post">
     <header>
       {% if page.img %}
       <img src="{{site.baseurl}}/img/{{page.img}}" alt="{{page.img}}">
