--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,35 @@ fieldset {
   opacity: 1
 }
 
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+  font-style: italic;
+}
+
 ul, ol {
   margin-bottom:2em;
+}
+
+article.post ul {
+  list-style: initial;
+  }
+article.post ol {
+  list-style: initial;
 }
 
 figure {
@@ -256,7 +283,6 @@ img, svg {
   text-align: center;
 }
 .footer small {
-  margin:2em;
   line-height: 1.5;
 }
 
@@ -337,7 +363,7 @@ Articles
 .articles p {
   padding: 1em 0;
   line-height: 1.6;
-  font-weight: 300;
+  font-weight: 400;
 }
 .articles p:last-of-type {
   padding-bottom: 0;
