--- a/_includes/_share-post.html
+++ b/_includes/_share-post.html
@@ -1,6 +1,6 @@
 <div class="share-page">
     <br>
-    <a class="share" href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.url }}{{ post.url }}%20via%20&#64;{{ site.owner.twitter }}" data-dnt="true">Share on Twitter</a>
+    <a class="share" href="https://twitter.com/intent/tweet?text=&quot;{{ post.title }}&quot;%20{{ site.url }}{{ site.baseurl }}{{ post.url }}%20via%20&#64;{{ site.owner.twitter }}" data-dnt="true">Share on Twitter</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </div>
