gh-pages header issue

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,12 +1,12 @@
 <header class="header">
   <h1>
-    <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+    <a href="{{ site.url }}{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
   </h1>
   <nav>
     <ul>
     {% for link in site.data.navigation %}{% if link.href == page.dir %} {% assign class = "current" %} {% else %} {% assign class = "normal" %} {% endif %}
       <li>
-        <a href="{% if link.external == false %}{{ site.baseurl }}{{ link.href }}{% endif %}{% if link.external == true %}{{ link.href }}{% endif %}">{{ link.title }}</a>
+        <a href="{% if link.external == false %}{{ site.url }}{{ site.baseurl }}{{ link.href }}{% endif %}{% if link.external == true %}{{ link.href }}{% endif %}">{{ link.title }}</a>
       </li>
     {% endfor %}
     </ul>
