--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -6,7 +6,7 @@
     <ul>
     {% for link in site.data.navigation %}{% if link.href == page.dir %} {% assign class = "current" %} {% else %} {% assign class = "normal" %} {% endif %}
       <li>
-        <a href="{% if link.external %}{{ link.href }}{% else %}{{ site.url }}{{ site.baseurl }}{{ link.href }}{% endif %}"">{{ link.title }}</a>
+        <a href="{% if link.external %}{{ link.href }}{% else %}{{ site.baseurl }}{{ link.href }}{% endif %}"">{{ link.title }}</a>
       </li>
     {% endfor %}
     </ul>
